# coinsteps

./: .env.example  App.tsx  BUILD_GUIDE.md  CONTRIBUTING.md  HEALTH_SYSTEM_README.md  LICENSE  README.md  SETUP_GUIDE.md  app.json  docker-compose.yml  eas.json  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: main.yml
backend/: .env  .env.example  .pre-commit-config.yaml  Dockerfile  FOOD_HEALTH_RATER_README.md  README.md  agentmail-docs.md  agentmail_client.py  anchor_client.py  auth.py  challenge_agent.py  challenge_monitor.py  food_frontend_example.html  food_health_rater.py  food_requirements.txt  fund_treasury.py  generate_treasury.py  health_ai.py  health_verifier.py  main.py  requirements.txt  test_airdrop_fix.py  test_food_api.py  wallet.py
docs/ml/: health-intelligence.md  model-card-health.md
ios-bundle/: metadata.json
src/components/: ActiveChallenges.tsx  Avatar.tsx  BettingGameModal.tsx  CameraModal.tsx  CreateChallengeModal.tsx  GradientBackground.tsx  MiniAreaChart.tsx  StepRing.tsx
src/config/: api.ts
src/contexts/: AuthContext.tsx
src/hooks/: useHealthData.ts
src/navigation/: RootNavigator.tsx
src/screens/: AuthScreen.tsx  AvatarSelectionScreen.tsx  ChallengesScreen.tsx  FriendsScreen.tsx  HealthDashboard.tsx  HomeScreen.tsx  LeaderboardScreen.tsx  WalletScreen.tsx
src/services/: apiClient.ts  auth.ts  betting.ts  (+6 more)
step-betting/: Anchor.toml  package.json
step-betting/programs/step-betting/: Cargo.toml
step-betting/programs/step-betting/src/: lib.rs
(+3 files in other folders)
